# dozerotoknowwhat

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
assets/: style.css
paginas/: linuxdocker.py
utils/: redirect.py
